--- a/portofolio.html
+++ b/portofolio.html
@@ -10,16 +10,17 @@
 <body style="background-color: #37383B;color: aliceblue;">
   <nav class="navbar navbar-expand-lg container" style="background-color: #37383B;color: aliceblue;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="color: #FF9900;">IH </a>
+        <a class="navbar-brand" href="#" style="color: #FF9900;"><img class="img-fluid rounded-top" src="logo.png" alt="Iwanul Hakim" style="width: 50px;"> </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav mx-auto" style="color: aliceblue;">
           <a class="nav-link" href="index.html" style="color: aliceblue;">Home</a>
-          <a class="nav-link" href="aboutme.html" style="color: azure;">About Me</a>
+          <a class="nav-link" href="aboutme.html" style="color: aliceblue;">About Me</a>
           <a class="nav-link" href="achievement.html" style="color: aliceblue;" >Achievement</a>
           <a class="nav-link" href="portofolio.html" style="color: #FF9900;" >Portofolio</a>
+          <a class="nav-link" href="contactme.html" style="color: aliceblue;" >Contact</a>
         </div>
         <button style="background-color: #FF9900;" class="btn btn-primary">Hire Me</button>
       </div>
