--- a/achievement.html
+++ b/achievement.html
@@ -9,43 +9,44 @@
   <body>
 </head>
 <style>
-    img {
+    .img-ach {
         object-fit: cover !important;
         width: 500px !important;
         height: 300px !important;
     }
 </style>
 <body style="background-color: #37383B;color: aliceblue;">
-  <nav class="navbar navbar-expand-lg container" style="background-color: #37383B;color: aliceblue;">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="color: #FF9900;">IH </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav mx-auto" style="color: aliceblue;">
-            <a class="nav-link" href="index.html" style="color: aliceblue;">Home</a>
-            <a class="nav-link" href="aboutme.html" style="color: azure;">About Me</a>
-            <a class="nav-link" href="achievement.html" style="color: #FF9900;" >Achievement</a>
-            <a class="nav-link" href="portofolio.html" style="color: aliceblue;" >Portofolio</a>
+    <nav class="navbar navbar-expand-lg container" style="background-color: #37383B;color: aliceblue;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#" style="color: #FF9900;"><img class="img-fluid rounded-top" src="logo.png" alt="Iwanul Hakim" style="width: 50px;"> </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav mx-auto" style="color: aliceblue;">
+              <a class="nav-link" href="index.html" style="color: aliceblue;">Home</a>
+              <a class="nav-link" href="aboutme.html" style="color: aliceblue;">About Me</a>
+              <a class="nav-link" href="achievement.html" style="color: #FF9900;" >Achievement</a>
+              <a class="nav-link" href="portofolio.html" style="color: aliceblue" >Portofolio</a>
+              <a class="nav-link" href="contactme.html" style="color: aliceblue;" >Contact</a>
+            </div>
+            <button style="background-color: #FF9900;" class="btn btn-primary">Hire Me</button>
           </div>
-        <button style="background-color: #FF9900;" class="btn btn-primary">Hire Me</button>
-      </div>
-    </div>
-  </nav>
+        </div>
+      </nav>
     <section class="container">
         <div class="row">
           <h1 style="color: #FF9900;">Achievement</h1>
         </div>
         <div class="row">
           <div class="col-md-4">
-            <img class="img-fluid rounded-top" src="sertif1.jpeg" alt="Iwanul Hakim" >
+            <img class="img-fluid img-ach rounded-top mb-3" src="sertif1.jpeg" alt="Iwanul Hakim" >
           </div>
           <div class="col-md-4">
-            <img class="img-fluid rounded-top" src="asoy.jpeg" alt="Iwanul Hakim" >
+            <img class="img-fluid img-ach rounded-top mb-3" src="asoy.jpeg" alt="Iwanul Hakim" >
           </div>
           <div class="col-md-4">
-            <img class="img-fluid rounded-top" src="sertif2.jpeg" alt="Iwanul Hakim" >
+            <img class="img-fluid img-ach rounded-top mb-3" src="sertif2.jpeg" alt="Iwanul Hakim" >
           </div>
         </div>
       </section>
