--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
   <body style="background-color: #37383B;color: aliceblue;">
     <nav class="navbar navbar-expand-lg container" style="background-color: #37383B;color: aliceblue;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#" style="color: #FF9900;">IH </a>
+        <a class="navbar-brand" href="#" style="color: #FF9900;"><img class="img-fluid rounded-top" src="logo.png" alt="Iwanul Hakim" style="width: 50px;"> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav mx-auto" style="color: aliceblue;">
             <a class="nav-link" href="index.html" style="color: #FF9900;">Home</a>
-            <a class="nav-link" href="aboutme.html" style="color: azure;">About Me</a>
+            <a class="nav-link" href="aboutme.html" style="color: aliceblue;">About Me</a>
             <a class="nav-link" href="achievement.html" style="color: aliceblue;" >Achievement</a>
             <a class="nav-link" href="portofolio.html" style="color: aliceblue;" >Portofolio</a>
+            <a class="nav-link" href="contactme.html" style="color: aliceblue;" >Contact</a>  
           </div>
           <button style="background-color: #FF9900;" class="btn btn-primary">Hire Me</button>
         </div>
@@ -32,7 +33,7 @@
           <p class="my-3 mb-5 fs-5">
             Iwanul Hakim adalah mahasiswa Pendidikan Multimedia di Universitas Pendidikan Indonesia (UPI) yang mempelajari desain grafis, animasi, produksi video, dan pengembangan konten digital. Selain berprestasi di bidang akademik, Iwanul juga memiliki hobi bernyanyi dan sering tampil di acara kampus. 
           </p>
-          <button class="btn" style="background-color: #FF9900;">Hire Me</button>
+          <button class="btn mb-3" style="background-color: #FF9900;">Hire Me</button>
         </div>
         <div class="col-md-4">
           <img class="img-fluid rounded-top" src="Fotoiwan.png" alt="Iwanul Hakim" style="border-radius: 70px;">
