--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <button class="btn mb-3" style="background-color: #FF9900;">Hire Me</button>
         </div>
         <div class="col-md-4">
-          <img class="img-fluid rounded-top" src="Fotoiwan.png" alt="Iwanul Hakim" style="border-radius: 70px;">
+          <img class="img-fluid rounded-top" src="fotoiwan.png" alt="Iwanul Hakim" style="border-radius: 70px;">
         </div> 
       </div>
     </section>
